# f1tenth_gym

./: .gitattributes  .gitignore  README.md  mse_data.json  pyproject.toml  requirements.txt
.conda/: gym_env.yml  gym_env_cpu.yml
.github/: dependabot.yml
.github/workflows/: pylint.yml  pytest.yml
data/datasets/: lidar_tracking_Oschersleben_map_pure_pursuit_n10000.npz  lidar_tracking_Oschersleben_map_pure_pursuit_n3018.npz  lidar_tracking_Oschersleben_map_pure_pursuit_n3591.npz  lidar_tracking_Oschersleben_map_pure_pursuit_n998.npz  lidar_tracking_combined_pure_pursuit_n17607.npz
data/maps/: README.md  convert.py  rename.py
data/models/: heading_error_arch10.pth  heading_error_arch7.pth  heading_error_arch8.pth  heading_error_arch9.pth  left_wall_dist,right_wall_dist_arch10.pth  left_wall_dist,right_wall_dist_arch5.pth  (+6 more)
f110_gym/: README.md  pyproject.toml
f110_gym/f110_gym/: __init__.py
f110_gym/f110_gym/envs/: __init__.py  base_classes.py  collision_models.py  dynamic_models.py  f110_env.py  integrator.py  laser_models.py  race_car.py  rendering.py  simulator.py  simulator_params.py  vehicle_params.py
f110_gym/f110_gym/unittest/: collision_checks.py  dynamics_test.py  legacy_scan_gen.py  pyglet_test.py  random_trackgen.py
f110_gym/tests/: test_f110_env.py  test_models.py
f110_planning/: README.md  pyproject.toml
f110_planning/f110_planning/: __init__.py  base.py
f110_planning/f110_planning/metric_callbacks/: __init__.py  aggregator.py  base.py  cross_track_error.py  heading_error.py  lap_time.py  smoothness.py  speed.py  wall_proximity.py
f110_planning/f110_planning/misc/: __init__.py  dummy_planner.py  flippy_planner.py  hybrid_planner.py  manual_planner.py  random_planner.py
f110_planning/f110_planning/reactive/: __init__.py  bubble_planner.py  disparity_extender_planner.py  dnn_planner.py  dynamic_waypoint_planner.py  edge_cloud_planner.py  gap_follower_planner.py  lidar_dnn_planner.py  longest_path_planner.py  longest_reachable_path_planner.py  ransac_midline_planner.py  wall_following_angle_planner.py  wall_following_distance_planner.py
f110_planning/f110_planning/render_callbacks/: __init__.py  camera.py  dynamic_waypoint.py  lidar.py  ransac_walls.py  trace.py  waypoints.py
f110_planning/f110_planning/schedulers/: __init__.py  always_call_scheduler.py  fixed_interval_scheduler.py
f110_planning/f110_planning/tracking/: __init__.py  dnn_planner.py  lqr_planner.py  pure_pursuit_planner.py  stanley_planner.py
f110_planning/f110_planning/utils/: __init__.py  geometry_utils.py  lidar_utils.py  lqr_utils.py  nn_models.py  pure_pursuit_utils.py  reactive_utils.py  sim_utils.py  tracking_utils.py  waypoint_utils.py
f110_planning/tests/: conftest.py  test_metric_callbacks.py  test_planners.py  test_reactive_planners.py  test_utils.py
models/: lidar_model1_1.keras  lidar_model1_2.keras  lidar_model2_1.keras  lidar_model2_2.keras  lidar_model3_1.keras  lidar_model3_2.keras
(+187 files in other folders)
