[project]
name = "f1tenth_ng"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pylint",
]

[tool.pytest.ini_options]
testpaths = [
    "f110_gym/tests",
    "f110_planning/tests",
    "scripts/datagen/tests",
    "scripts/sim/tests",
    "scripts/train/tests",
]
pythonpath = [
    ".",
    "f110_gym",
    "f110_planning",
]
addopts = "-v --durations=5"
filterwarnings = [
    "ignore::DeprecationWarning:torchao",
]
