[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "f110_gym"
version = "0.2.1"
authors = [
  {name = "Hongrui Zheng", email = "billyzheng.bz@gmail.com"}
]
description = "F1TENTH gym environment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "gym",
  "numpy>=1.18.0",
  "Pillow>=9.0.1",
  "scipy>=1.7.3",
  "numba>=0.55.2",
  "pyyaml>=5.3.1",
  "pyglet",
  "pyopengl",
]

[project.urls]
Homepage = "https://f1tenth.org"


